test/errors/base_types_error/zs/bitfield_unknown_length_error.zs
package bitfield_unknown_length_error;

struct UnknownLengthBitfield
{
    bit<unknownLength>  wrong;
};
